# gibber

./: composer.json  package-lock.json  package.json
app/Models/: User.php
app/Providers/: AppServiceProvider.php
app/View/Components/: AppLayout.php
backend/: .gitignore  Cargo.toml  Dockerfile  backend.opam  dune-project  migrate.js  package-lock.json  package.json
backend/flow-typed/npm/: chalk_vx.x.x.js  pg_v8.x.x.js  sqlite3_vx.x.x.js
backend/migrations/: 0-create-dream-session.down.sql  0-create-dream-session.up.sql
backend/migrator/: log.js  postgres.js  refresh.js  revert.js  selectDB.js  sqlite.js  tracker.js  types.js  up.js
backend/src/: main.rs
config/: app.php  logging.php
frontend/: .gitignore  App.js  app.json  babel.config.js  bsconfig.json  package-lock.json  package.json
frontend/app/: index.js
frontend/src/: App.res
resources/js/: app.js
resources/views/: welcome.blade.php
resources/views/components/: dropdown.blade.php  nav-link.blade.php
resources/views/layouts/: app.blade.php  navigation.blade.php
routes/: web.php
